--- a/samples/hello_world/prj.conf
+++ b/samples/hello_world/prj.conf
@@ -1,1 +1,57 @@
 # nothing here
+
+CONFIG_LVGL=y
+CONFIG_DISPLAY=y
+
+CONFIG_ILI9341=y
+CONFIG_SPI=y
+
+CONFIG_GPIO=y
+CONFIG_PWM=y
+
+CONFIG_LV_FONT_MONTSERRAT_14=y
+CONFIG_LV_Z_MEM_POOL_SIZE=65536
+
+CONFIG_INPUT=y
+
+CONFIG_I2C=y
+
+CONFIG_I2C_INIT_PRIORITY=50
+
+CONFIG_MAIN_STACK_SIZE=8192
+
+CONFIG_LV_FONT_MONTSERRAT_14=y
+
+CONFIG_RING_BUFFER=y
+
+# CONFIG_LV_FONT_UNSCII_16=y
+
+CONFIG_LV_FONT_UNSCII_8=y
+
+# CONFIG_LVGL_DISPLAY_VER_RES=320
+
+CONFIG_LOG=y
+CONFIG_LOG_MODE_DEFERRED=n 
+# CONFIG_LOG_DEFAULT_LEVEL=4
+# CONFIG_DISPLAY_LOG_LEVEL_DBG=y
+# CONFIG_SPI_LOG_LEVEL_DBG=y
+
+CONFIG_SHELL=y
+CONFIG_SHELL_AUTOSTART=n
+CONFIG_SHELL_BACKEND_SERIAL=y
+CONFIG_SHELL_LOG_BACKEND=n
+CONFIG_SHELL_BACKEND_DUMMY=n
+# CONFIG_SHELL_CMDS=y
+
+# CONFIG_SHELL_STACK_SIZE=4096
+# # CONFIG_SHELL_CMD_ROOT="authentication"
+# CONFIG_SHELL_HISTORY=y
+CONFIG_SHELL_HELP=n
+
+# CONFIG_SHELL_VT100_COMMANDS=y
+# CONFIG_SHELL_TAB=y
+
+# NO console / UART shell
+CONFIG_CONSOLE=y
+CONFIG_UART_CONSOLE=y
+
